--- a/ats_cv_analyzer/requirements.txt
+++ b/ats_cv_analyzer/requirements.txt
@@ -8,4 +8,4 @@ streamlit==1.39.0
 pillow==10.4.0
 plotly
 spacy
-n-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
